# NxtVR

./: .gitignore
src/: CMakeLists.txt  logging.h  nxtvr.cpp  pico_sdk_import.cmake
src/hid/: callbacks.cpp  hid_handler.cpp  hid_handler.h  tusb_config.h  usb_descriptors.cpp  usb_descriptors.h
src/sensors/: sensor.cpp  sensor.h
src/sensors/mpu6050/: mpu6050.cpp  mpu6050.h
